--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
   <head>
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <title>logo_cube</title>
-    <meta name="description" content="logo_cube" />
+    <title>Saberls</title>
+    <meta name="description" content="portfolio" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="stylesheet" href="./index.css" />
   </head>
