--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <head>
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <title>Saberls</title>
+    <title>portfolio</title>
     <meta name="description" content="portfolio" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="stylesheet" href="./index.css" />
@@ -71,7 +71,7 @@
           </div>
         </a>
         <!-- CV -->
-        <a target="_blank" class="face top" href="">
+        <a target="_blank" class="face top" href="https://1drv.ms/f/c/9e2713990076608d/EsIYzpdDwO5Kolk7_pQSJpsBgIcno9RKc-iSEa4HyFTiJA?e=WL0DY1">
           <div class="logo-container">
             <img
               src="./icons/file-cv-svgrepo-com.svg"
@@ -80,7 +80,7 @@
           </div>
         </a>
         <!-- SOURCE CODE -->
-        <a target="_blank" class="face bottom" href="">
+        <a target="_blank" class="face bottom" href="https://github.com/SaberLS/saberls.github.io">
           <div class="logo-container">
             <img
               src="./icons/code-svgrepo-com.svg"
