--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         <a
           class="face front"
           target="_blank"
-          href="mailto:patryk.platek@onet.pl"
+          href="mailto:patryk.platek19@gmail.com"
         >
           <div class="logo-container">
             <img
