--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
           </div>
         </a>
         <!-- CV -->
-        <a target="_blank" class="face top" href="https://1drv.ms/f/c/9e2713990076608d/EsIYzpdDwO5Kolk7_pQSJpsBgIcno9RKc-iSEa4HyFTiJA?e=WL0DY1">
+        <a target="_blank" class="face top" href="https://1drv.ms/f/c/9e2713990076608d/Ephf1Fga8elFklUYLRq9Es4BH2hLFm13wJWnEVGQdRCYWQ?e=cM5ImU">
           <div class="logo-container">
             <img
               src="./icons/file-cv-svgrepo-com.svg"
